compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__accessor_multiple_variants_multiple_positions2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Person {\n    Teacher(title: String, age: Int, name: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
----- SOURCE CODE

pub type Person {
    Teacher(title: String, age: Int, name: String)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }
pub fn get_age(person: Person) { person.age }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:6:41
  │
6 │ pub fn get_name(person: Person) { person.name }
  │                                         ^^^^^ Did you mean `age`?

The value being accessed has this type:

    Person

It has these accessible fields:

    .age

Note: The field you are trying to access is not defined consistently across
all variants of this custom type. To fix this, ensure that all variants
include the field with the same name, position, and type, or refactor your
type to avoid including this field in incompatible variants.
