compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_field_that_appears_in_a_variant_has_note.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble {\n  Wibble(field: Int)\n  Wobble(not_field: String, field: Int)\n}\n\npub fn main(wibble: Wibble) {\n  wibble.field\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(field: Int)
  Wobble(not_field: String, field: Int)
}

pub fn main(wibble: Wibble) {
  wibble.field
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:8:9
  │
8 │   wibble.field
  │         ^^^^^^ This field does not exist

The value being accessed has this type:

    Wibble

It does not have fields that are common across all variants.

Note: The field you are trying to access is not defined consistently across
all variants of this custom type. To fix this, ensure that all variants
include the field with the same name, position, and type, or refactor your
type to avoid including this field in incompatible variants.
